# nobrainer-zoo

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  [WIP]-monai_brats_segmentation_3d.py  ams_inference.py  bayesian_inference_general.py  brainy_inference.py  cli.py  download.py  models_to_add.md  nobrainer_Docker_file  pyproject.toml  setup.cfg  setup.py  utils.py
.github/ISSUE_TEMPLATE/: request-to-add-a-model.md
.github/ISSUE_TEMPLATE/workflows/: release.yml
nobrainer-zoo/: _version.py  cli.py  download.py  model_database.json  utils.py
nobrainer-zoo/DDIG/VoxelMorph/1.0.0/: spec.yaml
nobrainer-zoo/UCL/SynthSeg/0.1/: spec.yaml
nobrainer-zoo/data/: README.md
nobrainer-zoo/neuronets/ams/0.1.0/: spec.yaml
nobrainer-zoo/neuronets/brainy/0.1.0/: spec.yaml
nobrainer-zoo/neuronets/kwyk/0.4.1/bvwn_multi_prior/: spec.yaml
nobrainerzoo/: Dockerfile  _version.py  cli.py  download.py  model_database.json  utils.py
nobrainerzoo/DDIG/SynthMorph/: register.py
nobrainerzoo/DDIG/SynthMorph/1.0.0/brains/: spec.yaml  spec_location.md
nobrainerzoo/DDIG/SynthMorph/1.0.0/shapes/: spec.yaml  spec_location.md
nobrainerzoo/MIC-DKFZ/HD-BET/: hdbet_predict.py  hdbet_train.py  spec_train.yaml  spec_val.yaml
nobrainerzoo/UCL/SynthSR/1.0.0/general/: spec.yaml
nobrainerzoo/UCL/SynthSR/1.0.0/hyperfine/: predict.py  spec.yaml
nobrainerzoo/UCL/SynthSeg/0.1/: predict.py  spec.yaml
nobrainerzoo/lcn/parcnet/: punet.py
nobrainerzoo/lcn/parcnet/1.0.0/: parc.py  predict.py  punet.py  readme.txt  requirements.txt
nobrainerzoo/neuronets/: nobrainer_Docker_file
nobrainerzoo/neuronets/AMS/: AMS_Train_Unet.py  AMS_train_spec.yaml  AMS_train_unet.py
nobrainerzoo/neuronets/ams/: AMS_train_spec.yaml
nobrainerzoo/neuronets/ams/0.1.0/: spec.yaml
nobrainerzoo/neuronets/brainy/: Brainy_Train_Unet.py  brainy_train_spec.yaml
nobrainerzoo/neuronets/brainy/0.1.0/: spec.yaml  spec.yml
nobrainerzoo/neuronets/kwyk/0.4.1/bwn/: spec.yaml
options/: base_options.py  base_options.yaml
training_scripts/: BayesianAMS_Train_Meshnet.py  BayesianBrainy_Train_Meshnet.py  BayesianKWYK_Train.py  Brainy_Train_Unet.py
voxelmorph/: train.py
zoo/: cli.py  utils.py
