[metadata]
name = nobrainer-zoo
url = https://neuronets.github.io
author = Nobrainer Developers
author_email = rajaei.hoda@gmail.com
description = A framework for inference and re-training of pretrained neuroimaging models
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = neuroimaging, model-zoo, medical-imaging, deeplearning 
license = Apache License, 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: 1`OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source Code = https://github.com/neuronets/nobrainer-zoo

[options]
python_requires = >= 3.7
install_requires =
    click
    pyyaml
zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    nobrainer-zoo=nobrainerzoo.cli:cli
    
[options.extras_require]
dev = 
    nobrainer
    
[versioneer]
VCS = git
style = pep440
versionfile_source = nobrainerzoo/_version.py
versionfile_build = nobrainerzoo/_version.py
tag_prefix =
parentdir_prefix =


