[metadata]
name = nobrainer-zoo
url = https://neuronets.github.io
author = Nobrainer Developers
author_email = rajaei.hoda@gmail.com
description = A framework for inference and re-training of pretrained neuroimaging models
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = neuroimaging, model-zoo, medical-imaging, deeplearning
license = Apache License, 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source Code = https://github.com/neuronets/nobrainer-zoo

[options]
python_requires = >= 3.7
install_requires =
    click
    pyyaml
zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    nobrainer-zoo=nobrainerzoo.cli:cli

[options.extras_require]
dev =
    nobrainer

[versioneer]
VCS = git
style = pep440
versionfile_source = nobrainerzoo/_version.py
versionfile_build = nobrainerzoo/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 100
#ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
ignore = E203,W503
exclude =
    *sphinx*
    */__init__.py
    .tox/
    _version.py
    versioneer.py

[codespell]
skip = nobrainerzoo/_version.py,versioneer.py
